test/files/neg/macro-override-macro-overrides-abstract-method-b/Impls_Macros_1.scala
import scala.reflect.macros.blackbox.Context
import language.experimental.macros

trait T { def t(): Unit }
trait A { def t(): Unit = () }

object Macro { def t(c: Context)(): c.Expr[Unit] = c.universe.reify(()) }
trait C extends T { self: A => override def t(): Unit = macro Macro.t }
